13793
{code}
scala> class S(override val toString : String)      
defined class S

scala> val (foo, bar) = (new S("foo"), new S("bar"))
<console>:4: error: wrong number of arguments for method apply: (Int)Char in class RichString
("" + "foo: S = " +  (if(`foo`.asInstanceOf[AnyRef] != null)  ((if(`foo`.toString().contains('\n'))  "\n" else "") + `foo`.toString() + "\n") else "null\n")  + "bar: S = " +  (if(`bar`.asInstanceOf[AnyRef] != null)  ((if(`bar`.toString().contains('\n'))  "\n" else "") + `bar`.toString() + "\n") else "null\n") 
                                                                                                                                   ^
{code}

I can't repro this outside the interpreter at the moment. 
